--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest",
+        "test:cov": "jest --coverage",
+        "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "author": "jfranconetooo@gmail.com",
     "license": "ISC",
     "devDependencies": {
+        "@faker-js/faker": "^8.4.1",
         "@nestjs/cli": "^10.3.2",
         "@nestjs/schematics": "^10.1.1",
         "@nestjs/testing": "^10.3.8",
+        "@types/jest": "^29.5.12",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.12.12",
         "@typescript-eslint/parser": "^7.9.0",
@@ -29,7 +33,10 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-promise": "^6.1.1",
+        "jest": "^29.7.0",
         "prettier": "^3.2.5",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.1.2",
         "ts-node-dev": "^2.0.0",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.4.5",
